--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -12,7 +12,7 @@
   
   <br><%= f.label :利用曜日, class: "label-#{yield(:class_text)}" %>
   <%= f.label :月, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_monday, {}, "月", "" %>
+  <%= f.check_box :date_of_day, {}, "月", "" %>
   
   <%= f.label :火, class: "label-#{yield(:class_text)}" %>
   <%= f.check_box :date_of_day_tuesday, {}, "火", "" %>
