--- a/app/views/clients/edit_basic_info.html.erb
+++ b/app/views/clients/edit_basic_info.html.erb
@@ -12,29 +12,18 @@
   <%= f.label :介護度, class: "label-#{yield(:class_text)}" %>
   <%= f.select :nursing_number,[["要支援1", "要支援1"], ["要支援2", "要支援2"], ["要介護1", "要介護1"], ["要介護2", "要介護2"], ["要介護3", "要介護3"], ["要介護4", "要介護4"], ["要介護5", "要介護5"]], class: "form-control" %>
   
-  <br><%= f.label :date_of_day, class: "label-#{yield(:class_text)}" %>
-  <%= f.label :date_of_day_monday, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_monday, {}, "月", "" %>
   
-  <%= f.label :date_of_day_tuesday, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_tuesday, {}, "火", "" %>
+    <br><%= f.label :date_of_day, class: "label-#{yield(:class_text)}" %>
+    <%= f.check_box :date_of_day, {multiple: true}, "月", nil %>月
+    <%= f.check_box :date_of_day, {multiple: true}, "火", nil %>火
+    <%= f.check_box :date_of_day, {multiple: true}, "水", nil %>水
+    <%= f.check_box :date_of_day, {multiple: true}, "木", nil %>木
+    <%= f.check_box :date_of_day, {multiple: true}, "金", nil %>金
+    <%= f.check_box :date_of_day, {multiple: true}, "土", nil %>土
+    <%= f.check_box :date_of_day, {multiple: true}, "日", nil %>日
   
-  <%= f.label :date_of_day_wednesday, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_wednesday, {}, "水", "" %>
   
-  <%= f.label :date_of_day_thursday, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_thursday, {}, "木", "" %>
-  
-  <%= f.label :date_of_day_friday, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_friday, {}, "金", "" %>
-  
-  <%= f.label :date_of_day_saturday, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_saturday, {}, "土", "" %>
-  
-  <%= f.label :date_of_day_sunday, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_sunday, {}, "日", "" %>
-  
-  <br><%= f.label :client_birthday, class: "label-#{yield(:class_text)}" %>
+  <br><%= f.label "生年月日", class: "label-#{yield(:class_text)}" %>
   <%= f.date_field :client_birthday, class: "form-control" %>
   
   
