--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -22,13 +22,7 @@
         <td><%= client.client_name %>様</td>
         <td><%= client.telephone_number %></td>
         <td><%= client.nursing_number %></td>
-        <td><%= client.date_of_day_monday %>
-            <%= client.date_of_day_tuesday %>
-            <%= client.date_of_day_wednesday %>
-            <%= client.date_of_day_thursday %>
-            <%= client.date_of_day_friday %>
-            <%= client.date_of_day_saturday %>
-            <%= client.date_of_day_sunday %></td>
+        <td><%= client.date_of_day %></td>
         <td><%= client.client_birthday.strftime("%F")if client.client_birthday.present? %></td>    
         <td><%= link_to "モニタリング", monitoring_basic_info_client_path(client) %></td>
       </tr>
