--- a/app/views/clients/monitoring_basic_info.html.erb
+++ b/app/views/clients/monitoring_basic_info.html.erb
@@ -1,69 +1,145 @@
-  <div class= "center">
-    <table class="table table-bordered table-condensed table-hover" id="table-client">
-        <h1>利用者情報報告書</h1>
-      <%= form_with(model: @client, url: update_monitoring_basic_info_client_path(@client), method: :patch, local: true) do |f| %>
-      <p><span class="under">利用者名: <%= @client.client_name %>様の令和
-        <%= f.number_field :monitoring_worked_on_year, class: "hoge", min: 1, max: 99, size: 1 %>年
-        <%= f.number_field :monitoring_worked_on_month, class: "hoge", min: 1, max: 12, size: 1 %>月
-        の利用者の状況をご報告いたします。
-        </span></p>
+<div class= "center">
+  <table class="table table-bordered table-condensed table-hover" id="table-client">
+    <h1>利用者情報報告書</h1>
+    <%= form_with(model: @client, url: update_monitoring_basic_info_client_path(@client), method: :patch, local: true) do |f| %>
+  <p><span class="under">利用者名: <%= @client.client_name %>様の令和
+    <%= f.number_field :monitoring_worked_on_year, class: "hoge", min: 1, max: 99, size: 1 %>年
+    <%= f.number_field :monitoring_worked_on_month, class: "hoge", min: 1, max: 12, size: 1 %>月
+    の利用者の状況をご報告いたします。
+    </span></p>
+  
+    <%= f.label :monitoring_needs, class: "label-#{yield(:class_text)}" %>
+    <br><%= f.text_area :monitoring_needs, class: "hoge", size: "100x10" %></br>
+  
+    <br><%= f.label :monitoring_short_run_target, class: "label-#{yield(:class_text)}" %>
+    <br><%= f.text_area :monitoring_short_run_target, class: "hoge", size: "100x10" %></br>
+  
+    <br><%= f.label :monitoring_service_adl, class: "label-#{yield(:class_text)}" %></br>
+    
+    <tr>  
+      <td align="center"><%= f.label :monitoring_exchange, class: "label-#{yield(:class_text)}" %>
+      <br><%= f.check_box :monitoring_exchange, {multiple: true}, "保たれている", nil %>
+      <%= f.label "保たれている", class: "label-#{yield(:class_text)}" %>
+      <%= f.check_box :monitoring_exchange, {multiple: true}, "ほぼ保たれている", nil %>
+      <%= f.label "ほぼ保たれている", class: "label-#{yield(:class_text)}" %>
+      <%= f.check_box :monitoring_exchange, {multiple: true}, "あまり保たれていない", nil %>
+      <%= f.label "あまり保たれていない", class: "label-#{yield(:class_text)}" %>
+      <%= f.check_box :monitoring_exchange, {multiple: true}, "保たれていない", nil %>
+      <%= f.label "保たれていない", class: "label-#{yield(:class_text)}" %>
       
-        <%= f.label :monitoring_needs, class: "label-#{yield(:class_text)}" %>
-        <br><%= f.text_area :monitoring_needs, class: "hoge", size: "80x10" %></br>
-      
-        <br><%= f.label :monitoring_short_run_target, class: "label-#{yield(:class_text)}" %>
-        <br><%= f.text_area :monitoring_short_run_target, class: "hoge", size: "80x10" %></br>
-      
-        <br><%= f.label :monitoring_service_adl, class: "label-#{yield(:class_text)}" %></br>
         
-        <tr>  
-        <td align="left"><%= f.label :monitoring_exchange, class: "label-#{yield(:class_text)}" %>
-          &ensp;<%= f.check_box :monitoring_exchange_yes, {}, "保たれている", "" %>
-          <%= f.label :monitoring_exchange_yes, class: "label-#{yield(:class_text)}" %>
-          
-          &ensp;<%= f.check_box :monitoring_exchange_so_yes, {}, "ほぼ保たれている", "" %>
-          <%= f.label :monitoring_exchange_so_yes, class: "label-#{yield(:class_text)}" %>
-          
-          &ensp;<%= f.check_box :monitoring_exchange_so_no, {}, "ほぼ保たれていない", "" %>
-          <%= f.label :monitoring_exchange_so_no, class: "label-#{yield(:class_text)}" %>
-          
-          &ensp;<%= f.check_box :monitoring_exchange_no, {}, "保たれていない", "" %>
-          <%= f.label :monitoring_exchange_no, class: "label-#{yield(:class_text)}" %>
-          
-          
-          
-          <br><%= f.label :monitoring_go_to_home, class: "label-#{yield(:class_text)}" %>
-          &ensp;<%= f.check_box :monitoring_go_to_home_yes, {}, "問題なし", "" %>
-          <%= f.label:monitoring_go_to_home_yes, class: "label-#{yield(:class_text)}" %>
-          
-          &ensp;<%= f.check_box :monitoring_go_to_home_no, {}, "問題あり", "" %>
-          <%= f.label :monitoring_go_to_home_no, class: "label-#{yield(:class_text)}" %></br>
-          
-          <%= f.label :monitoring_go_to_home_no_reason, class: "label-#{yield(:class_text)}" %>
-          <%= f.text_field :monitoring_go_to_home_no_reason, class: "form-control" %>
-          
-          <br><%= f.label :monitoring_walking, class: "label-#{yield(:class_text)}" %>
-          &ensp;<%= f.check_box :monitoring_walking_yes_self_support, {}, "自立", "" %>
-          <%= f.label :monitoring_walking_yes_self_support, class: "label-#{yield(:class_text)}" %>
-          
-          &ensp;<%= f.check_box :monitoring_walking_so_yes_self_support, {}, "見守り", "" %>
-          <%= f.label :monitoring_walking_so_yes_self_support, class: "label-#{yield(:class_text)}" %>
-           
-          &ensp;<%= f.check_box :monitoring_walking_so_no_self_support, {}, "一部介助", "" %>
-          <%= f.label :monitoring_walking_so_no_self_support, class: "label-#{yield(:class_text)}" %>
-           
-          &ensp;<%= f.check_box :monitoring_walking_no_self_support, {}, "介助", "" %>
-          <%= f.label :monitoring_walking_no_self_support, class: "label-#{yield(:class_text)}" %>
-           
-          &ensp;<%= f.check_box :monitoring_walking_no_self_support_car_chaice, {}, "見守り", "" %>
-          <%= f.label :monitoring_walking_no_self_support_car_chaice, class: "label-#{yield(:class_text)}" %>
-           
-           
+        <!--送迎-->
+        <br><%= f.label :monitoring_go_to_home, class: "label-#{yield(:class_text)}" %></br>
+            <%= f.check_box :monitoring_go_to_home, {multiple: true}, "問題あり", nil %>
+            <%= f.label "問題あり", class: "label-#{yield(:class_text)}" %>
+            <%= f.check_box :monitoring_go_to_home, {multiple: true}, "問題なし", nil %>
+            <%= f.label "問題なし", class: "label-#{yield(:class_text)}" %>
+        <br><%= f.label "問題あり理由", class: "label-#{yield(:class_text)}" %>
+        <%= f.text_field :monitoring_go_to_home, class: "form-control" %>
+        
+        
+        <!--歩行-->
+        <br><%= f.label :monitoring_walking, class: "label-#{yield(:class_text)}" %>
+        <br><%= f.check_box :monitoring_walking, {multiple: true}, "自立", nil %>
+      <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
+      <%= f.check_box :monitoring_walking, {multiple: true}, "見守り", nil %>
+      <%= f.label "見守り", class: "label-#{yield(:class_text)}" %>
+      <%= f.check_box :monitoring_walking, {multiple: true}, "一部介助", nil %>
+      <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
+      <%= f.check_box :monitoring_walking, {multiple: true}, "介助", nil %>
+      <%= f.label "介助", class: "label-#{yield(:class_text)}" %>
+      <%= f.check_box :monitoring_walking, {multiple: true}, "車いす", nil %>
+      <%= f.label "車いす", class: "label-#{yield(:class_text)}" %>
+         
+         <!--食事-->
+        <br><%= f.label :monitoring_eating, class: "label-#{yield(:class_text)}" %>
+        <br><%= f.check_box :monitoring_eating, {multiple: true}, "自立", nil %>
+      <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
+      <%= f.check_box :monitoring_eating, {multiple: true}, "一部介助", nil %>
+      <%= f.label "見守り", class: "label-#{yield(:class_text)}" %>
+      <%= f.check_box :monitoring_eating, {multiple: true}, "全介助", nil %>
+      <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
+        
+        <!--参加状況-->
+        <br><%= f.label :monitoring_situation_of_participation, class: "label-#{yield(:class_text)}" %>
+        <br><%= f.check_box :monitoring_situation_of_participation, {multiple: true}, "毎回実施", nil %>
+        <%= f.label "毎回実施", class: "label-#{yield(:class_text)}" %>
+        <%= f.check_box :monitoring_situation_of_participation, {multiple: true}, "ほぼ毎回実施", nil %>
+        <%= f.label "ほぼ毎回実施", class: "label-#{yield(:class_text)}" %>
+        <%= f.check_box :monitoring_situation_of_participation, {multiple: true}, "時々実施", nil %>
+        <%= f.label "時々実施", class: "label-#{yield(:class_text)}" %>
+        <%= f.check_box :monitoring_situation_of_participation, {multiple: true}, "あまりしない", nil %>
+        <%= f.label "あまりしない", class: "label-#{yield(:class_text)}" %>
+        
+        <!--入浴-->
+        <br><%= f.label :monitoring_both, class: "label-#{yield(:class_text)}" %>
+        <br><%= f.check_box :monitoring_both, {multiple: true}, "自立", nil %>
+        <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
+        <%= f.check_box :monitoring_both, {multiple: true}, "一部介助", nil %>
+        <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
+        <%= f.check_box :monitoring_both, {multiple: true}, "全介助", nil %>
+        <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
+        
+        <br><%= f.label "皮膚トラブル" , class: "label-#{yield(:class_text)}" %>
+        <%= f.text_field :monitoring_both_skin_trouble, class: "form-control" %></br>
+        
+        <!--更衣-->
+         <%= f.label :monitoring_changing_clothes, class: "label-#{yield(:class_text)}" %>
+         <br><%= f.check_box :monitoring_changing_clothes, {multiple: true}, "自立", nil %>
+        <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
+        <%= f.check_box :monitoring_changing_clothes, {multiple: true}, "一部介助", nil %>
+        <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
+        <%= f.check_box :monitoring_changing_clothes, {multiple: true}, "全介助", nil %>
+        <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
+        
+        <!--社会参加-->
+        <br><%= f.label :monitoring_community, class: "label-#{yield(:class_text)}" %>
+        <br><%= f.check_box :monitoring_community, {multiple: true}, "参加している", nil %>
+        <%= f.label "参加している", class: "label-#{yield(:class_text)}" %>
+        <%= f.check_box :monitoring_community, {multiple: true}, "参加していない", nil %>
+        <%= f.label "参加していない", class: "label-#{yield(:class_text)}" %>
+        <%= f.check_box :monitoring_community, {multiple: true}, "実施なし", nil %>
+        <%= f.label "実施なし", class: "label-#{yield(:class_text)}" %>
+        
+        <br><%= f.label "社会参加しているもの", class: "label-#{yield(:class_text)}" %>
+        <%= f.text_field :monitoring_community_content, class: "form-control" %>
+        
+        <!--利用状況-->
+        <br><%= f.label :monitoring_situation_dey, class: "label-#{yield(:class_text)}" %>
+        <br><%= f.check_box :monitoring_situation_dey, {multiple: true}, "休みなく利用", nil %>
+        <%= f.label "休みなく利用", class: "label-#{yield(:class_text)}" %>
+        <%= f.check_box :monitoring_situation_dey, {multiple: true}, "休んだ日がある", nil %>
+        <%= f.label "休んだ日がある", class: "label-#{yield(:class_text)}" %>
+        <br><%= f.label "休んだ日がある理由" , class: "label-#{yield(:class_text)}" %>
+        <%= f.text_field :monitoring_situation_dey, class: "form-control" %></br>
+        
+      </td>
+    </tr>
+      <!--#日常生活上の留意点 及び 介護の工夫など(総合的評価)-->
+      <tr>
+        <td>
+          <br><%= f.label :monitoring_attention, class: "label-#{yield(:class_text)}" %>
+          <br>※ 上記の内容を詳しく 又は利用中の様子や気づいた点を記入
+          <br><%= f.text_area :monitoring_attention, class: "hoge", size: "100x10" %></br>
         </td>
         
+      </tr>
+        <td>
+          <br><%= f.label :monitoring_service_need, class: "label-#{yield(:class_text)}" %>
+          
+          <br><%= f.check_box :monitoring_service_need, {multiple: true}, "必要あり", nil %>
+              <%= f.label "必要あり", class: "label-#{yield(:class_text)}" %>
+              <%= f.check_box :monitoring_service_need, {multiple: true}, "必要なし", nil %>
+              <%= f.label "必要なし", class: "label-#{yield(:class_text)}" %>
+          <br><%= f.label "必要あり理由", class: "label-#{yield(:class_text)}" %>
+              <%= f.text_field :monitoring_service_need, class: "form-control" %>
+          <br><%= f.submit "更新", class: "btn btn-primary btn-block btn-#{yield(:class_text)}" %>
+        </td>
       <% end %>  
     </table>  
   </div>            
+            
+        
       
       
      
