--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -10,30 +10,17 @@
   <%= f.label :介護度, class: "label-#{yield(:class_text)}" %>
   <%= f.select :nursing_number,[["要支援1", "要支援1"], ["要支援2", "要支援2"], ["要介護1", "要介護1"], ["要介護2", "要介護2"], ["要介護3", "要介護3"], ["要介護4", "要介護4"], ["要介護5", "要介護5"]], class: "form-control" %>
   
-  <br><%= f.label :利用曜日, class: "label-#{yield(:class_text)}" %>
-  <%= f.label :月, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day, {}, "月", "" %>
-  
-  <%= f.label :火, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_tuesday, {}, "火", "" %>
-  
-  <%= f.label :水, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_wednesday, {}, "水", "" %>
-  
-  <%= f.label :木, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_thursday, {}, "木", "" %>
-  
-  <%= f.label :金, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_friday, {}, "金", "" %>
-  
-  <%= f.label :土, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_saturday, {}, "土", "" %>
-  
-  <%= f.label :日, class: "label-#{yield(:class_text)}" %>
-  <%= f.check_box :date_of_day_sunday, {}, "日", "" %>
+  <br><%= f.label :利用日, class: "label-#{yield(:class_text)}" %>
+    <%= f.check_box :date_of_day, {multiple: true}, "月", nil %>月
+    <%= f.check_box :date_of_day, {multiple: true}, "火", nil %>火
+    <%= f.check_box :date_of_day, {multiple: true}, "水", nil %>水
+    <%= f.check_box :date_of_day, {multiple: true}, "木", nil %>木
+    <%= f.check_box :date_of_day, {multiple: true}, "金", nil %>金
+    <%= f.check_box :date_of_day, {multiple: true}, "土", nil %>土
+    <%= f.check_box :date_of_day, {multiple: true}, "日", nil %>日
   
   <br><%= f.label :生年月日, class: "label-#{yield(:class_text)}" %>
   <%= f.date_field :client_birthday, class: "form-control" %>
   
-  <%= f.submit :利用者を追加, class: "btn btn-primary btn-block btn- active btn-#{yield(:class_text)}" %>
+  <br><%= f.submit :利用者を追加, class: "btn btn-primary btn-block btn- active btn-#{yield(:class_text)}" %>
 <% end %>
