--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, "Top") %>
 <div class="center jumbotron">
-  <h1>00の里利用者管理システム</h1>
+  <h1>00の里デイサービス
+  <br>利用者管理システム</h1>
   <% if logged_in? %>
    <a class= "btn btn-lg btn-primary disabled">ログイン済み</a>
   <p>アカウント作成は<%= link_to "こちら", signup_path, class: "btn primary" %>から</p>
