日これから

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,7 +1,7 @@
 <h1>利用者一覧</h1>
 
 <%= will_paginate %> 
-  <table class="table table-bordered table-condensed table-hover" id="table-clients">
+  <table class="table table-bordered table-condensed table-hover" id="table-clientes">
     <thead>
       <tr>
         <th>本日利用チェック</th>
