--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,9 +1,11 @@
 <h1><%= @client.client_name %>様の個別記録</h1>
 <div>
   <table class="table table-bordered table-condensed client-table">
-    <%= link_to "⇦先月 ", client_path(date: @first_day.prev_month), class: "btn btn-info" %>
+    
+    <!--< %= link_to "⇦先月 ", client_path(date: @first_day.prev_month), class: "btn btn-info" %>-->
         
-    <%= link_to " 翌月⇨", client_path(date: @first_day.next_month), class: "btn btn-info" %>
+    <!--< %= link_to " 翌月⇨", client_path(date: @first_day.next_month), class: "btn btn-info" %>-->
+    
     <thead>
     <tr>
       <th>日付</th>
@@ -19,7 +21,7 @@
     <tbody>
       <% @clients.each do |client| %>
       <tr>
-        <td><%= l(client.monitoring.worked_on, format: :short) %></td>
+        <td><%= l(client.worked_on, format: :short) %></td>
         <td></td>
         <td></td>
         <td></td>
