--- a/app/views/monitorings/monitoring_basic_info.html.erb
+++ b/app/views/monitorings/monitoring_basic_info.html.erb
@@ -1,10 +1,10 @@
 <div class= "center">
   <table class="table table-bordered table-condensed table-hover" id="table-client">
     <meta charset = " utf-8 " />
-    <%= link_to "PDF", client_monitoring_path(@monitoring, format: "pdf") %>
+    
     <h1>利用者情報報告書</h1>
-    <%= form_with( url: create_monitoring_basic_info_client_monitoring_path(@monitoring), local: true, method: :post) do |f| %>
-  <p><span class="under">利用者名: <%= @monitoring.client.client_name %>様の令和
+    <%= form_with( model: @monitoring, url: create_monitoring_basic_info_client_monitorings_path(@client), local: true, method: :post) do |f| %>
+  <p><span class="under">利用者名: <%= @client.client_name %>様の令和
     <%= f.date_select(:monitoring_worked_on_year, discard_month:true) %>年
     <%= f.date_select(:monitoring_worked_on_month, discard_year:true, discard_day:true) %>
     の利用者の状況をご報告いたします。
