--- a/app/views/monitorings/monitoring_basic_info.html.erb
+++ b/app/views/monitorings/monitoring_basic_info.html.erb
@@ -4,7 +4,7 @@
     
     <h1>利用者情報報告書</h1>
     <%= form_with( model: @monitoring, url: create_monitoring_basic_info_client_monitorings_path(@client), local: true, method: :post) do |f| %>
-  <p><span class="under">利用者名: <%= @client.client_name %>様の令和
+  <p><span class="under">利用者名: <%= @client.client_name %>様の
     <%= f.date_select(:monitoring_worked_on_year, discard_month:true) %>年
     <%= f.date_select(:monitoring_worked_on_month, discard_year:true, discard_day:true) %>
     の利用者の状況をご報告いたします。
@@ -20,21 +20,21 @@
     
     <tr>  
       <td align="center"><%= f.label "［他者交流］", class: "label-#{yield(:class_text)}" %>
-      <br><%= f.radio_button :monitoring_exchange, :保たれている,checked: "checked" %>
+      <br><%= f.radio_button :monitoring_exchange, "保たれている" %>
       <%= f.label "保たれている", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_exchange, :保たれている, checked: "checked" %>
+      <%= f.radio_button :monitoring_exchange, "ほぼ保たれている" %>
       <%= f.label "ほぼ保たれている", class: "label-#{yield(:class_text)}" %>
-       <%= f.radio_button :monitoring_exchange, :ほぼ保たれている, checked: "checked" %>
+       <%= f.radio_button :monitoring_exchange, "あまり保たれていない" %>
       <%= f.label "あまり保たれていない", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_exchange, :保たれていない, checked: "checked" %>
+      <%= f.radio_button :monitoring_exchange, "保たれていない" %>
       <%= f.label "保たれていない", class: "label-#{yield(:class_text)}" %>
       
         
         <!--送迎-->
         <br><%= f.label "［送迎］", class: "label-#{yield(:class_text)}" %></br>
-            <%= f.radio_button :monitoring_go_to_home, :問題あり, checked: "checked" %>
+            <%= f.radio_button :monitoring_go_to_home, "問題あり" %>
             <%= f.label "問題あり", class: "label-#{yield(:class_text)}" %>
-            <%= f.radio_button :monitoring_go_to_home, :問題なし, checked: "checked" %>
+            <%= f.radio_button :monitoring_go_to_home, "問題なし" %>
             <%= f.label "問題なし", class: "label-#{yield(:class_text)}" %>
         <br><%= f.label "問題あり理由", class: "label-#{yield(:class_text)}" %>
         <br><%= f.text_area :monitoring_go_to_home, class: "hoge", size: "40x2" %>
